# plonk-by-fingers

./: Cargo.toml  LICENSE  Makefile.toml  README.md
src/: Untitled.ipynb  constrains.rs  constraints.rs  ec.rs  fft.rs  field.rs  lib.rs  matrix.rs  mt.rs  mulmodg.rs  pairing.rs  plonk.rs  poly.rs  prover.rs  stark101.rs
src/driving_fri/: mod.rs
src/field/: u64field.rs
src/pbh/: g1.rs  g2.rs  gt.rs  mod.rs  pairing.rs
src/plonk/: constraints.rs  mod.rs  srs.rs
src/plonk/plonk_by_hand/: g1.rs  g2.rs  gt.rs  mod.rs  pairing.rs  types.rs
src/plonk_by_hand/: constraints.rs  mod.rs  plonk.rs
src/stark101/: channel.rs  example.rs  format.rs  fri.rs  mod.rs  mt.rs  stark.rs
src/utils/: mod.rs  u64field.rs
