[package]
name = "plonk-by-fingers"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
hex = "0.4.3"
itertools = "0.10.5"
num-bigint = "0.4.3"
regex = "1.7.3"
sha2 = "0.10.7"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/katex-header.html"]
